--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -25,7 +25,16 @@
               <td>
                 <%= admin.email %>
               </td>
-              <td class="command-bar"><%= link_to_unless (admin.id == current_user.id || admin.id == @space.user_id), 'Remove', space_admin_url(@space, admin), class: "btn btn-invoice-action btn-xs", method: :delete, data: { confirm: 'Are you sure?' } %>
+              <td class="command-bar">
+                <% if (admin.id == current_user.id || admin.id == @space.user_id) -%>                  
+                  <%= link_to 'Remove', space_admin_url(@space, admin), 
+                      disabled: "disabled", class: "btn btn-invoice-action btn-xs", method: :delete, 
+                        data: { confirm: 'Are you sure?' } %>
+                <% else -%>
+                  <%= link_to 'Remove', space_admin_url(@space, admin), 
+                      class: "btn btn-invoice-action btn-xs", method: :delete, 
+                        data: { confirm: 'Are you sure?' } %>
+                <% end -%>
               </td>
             </tr>
           <% end %>
