--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -6,7 +6,7 @@
       </span>
       <hr>
 
-  <table class="table">
+  <table class="table" style="margin-bottom: 80px;">
     <thead>
       <tr>
         <th>Address</th>
