--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -1,44 +1,49 @@
-.col-md-8
-  = form_for([@space, @location]) do |f|
-    .form-group{:class => has_error(@location, :name)}
-      = f.label :name
-      = f.text_field :name, class: "form-control"
-      = field_errors(@location, :name)
-    .form-group{:class => has_error(@location, :address)}
-      = f.label :address
-      = f.text_field :address, class: "form-control"
-      = field_errors(@location, :address)
-    .form-group{:class => has_error(@location, :city)}
-      = f.label :city
-      = f.text_field :city, class: "form-control"
-      = field_errors(@location, :city)
-    .form-group{:class => has_error(@location, :state)}
-      = f.label :state
-      = f.text_field :state, class: "form-control"
-      = field_errors(@location, :state)
-    .form-group{:class => has_error(@location, :postal_code)}
-      = f.label :postal_code
-      = f.text_field :postal_code, class: "form-control"
-      = field_errors(@location, :postal_code)
-    .form-group{:class => has_error(@location, :country)}
-      = f.label :country
-      = f.country_select("country", {}, {class: "form-control"})
-      = field_errors(@location, :country)
-    .form-group{:class => has_error(@location, :timezone)}
-      = f.label :timezone
-      = f.time_zone_select "timezone", nil, {}, {class: "form-control"}
-      = field_errors(@location, :timezone)
-    .form-group{:class => has_error(@location, :currency)}
-      = f.label :currency
-      = f.select :currency, currency_list, {allow_blank: false }, {class: "form-control"}
-      = field_errors(@location, :currency)
-    .form-group{:class => has_error(@location, :tax_rate)}
-      = f.label :tax_rate
-      = f.text_field :tax_rate, class: "form-control"
-      = field_errors(@location, :tax_rate)
+.col-md-12
+  %h4 Edit Location Settings
+  %hr
+  .col-md-8
+    = form_for([@space, @location]) do |f|
+      .form-group{:class => has_error(@location, :name)}
+        = f.label :name
+        = f.text_field :name, class: "form-control"
+        = field_errors(@location, :name)
+      .form-group{:class => has_error(@location, :address)}
+        = f.label :address
+        = f.text_field :address, class: "form-control"
+        = field_errors(@location, :address)
+      .form-group{:class => has_error(@location, :city)}
+        = f.label :city
+        = f.text_field :city, class: "form-control"
+        = field_errors(@location, :city)
+      .form-group{:class => has_error(@location, :state)}
+        = f.label :state
+        = f.text_field :state, class: "form-control"
+        = field_errors(@location, :state)
+      .form-group{:class => has_error(@location, :postal_code)}
+        = f.label :postal_code
+        = f.text_field :postal_code, class: "form-control"
+        = field_errors(@location, :postal_code)
+      .form-group{:class => has_error(@location, :country)}
+        = f.label :country
+        = f.country_select("country", {}, {class: "form-control"})
+        = field_errors(@location, :country)
+      .form-group{:class => has_error(@location, :timezone)}
+        = f.label :timezone
+        = f.time_zone_select "timezone", nil, {}, {class: "form-control"}
+        = field_errors(@location, :timezone)
+      .form-group{:class => has_error(@location, :currency)}
+        = f.label :currency
+        = f.select :currency, currency_list, {allow_blank: false }, {class: "form-control"}
+        = field_errors(@location, :currency)
+      .form-group{:class => has_error(@location, :tax_rate)}
+        = f.label :tax_rate
+        .input-group
+          = f.text_field :tax_rate, class: "form-control"
+          = field_errors(@location, :tax_rate)
+          %span{class: "input-group-addon"} %
 
-    = f.submit class: "btn btn-primary" 
-    or 
-    = link_to "Cancel", space_locations_path(@space)
+      = f.submit class: "btn btn-success"
+      or
+      = link_to "Cancel", space_locations_path(@space)
 
 
