--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,32 +1,34 @@
+.col-md-12
+  %h4 Account Settings
+  %hr
+  .col-md-8
 
-.col-md-8
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+      = devise_error_messages!
 
-  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-    = devise_error_messages!
-    
-    .form-group{:class => has_error(resource, :email)}
-      = f.label :email 
-      = f.email_field :email, autofocus: true , class: "form-control"
-      = field_errors(resource, :email)
+      .form-group{:class => has_error(resource, :email)}
+        = f.label :email
+        = f.email_field :email, autofocus: true , class: "form-control"
+        = field_errors(resource, :email)
 
-    .form-group{:class => has_error(resource, :password)}
-      = f.label :password
-      = f.password_field :password, autocomplete: "off", class: "form-control"
-      = field_errors(resource, :password)
-      %span.help-block
-        <i>(leave blank if you don't want to change it)</i>
+      .form-group{:class => has_error(resource, :password)}
+        = f.label :password
+        = f.password_field :password, autocomplete: "off", class: "form-control"
+        = field_errors(resource, :password)
+        %span.help-block
+          <i>(leave blank if you don't want to change it)</i>
 
-    .form-group{:class => has_error(resource, :password_confirmation)}
-      = f.label :password_confirmation 
-      = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
-      = field_errors(resource, :password_confirmation)
+      .form-group{:class => has_error(resource, :password_confirmation)}
+        = f.label :password_confirmation
+        = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
+        = field_errors(resource, :password_confirmation)
 
-    .form-group{:class => has_error(resource, :current_password)}
-      = f.label :current_password 
-      = f.password_field :current_password, autocomplete: "off", class: "form-control"
-      = field_errors(resource, :current_password)
-      %span.help-block
-        <i>(we need your current password to confirm your changes)</i>
+      .form-group{:class => has_error(resource, :current_password)}
+        = f.label :current_password
+        = f.password_field :current_password, autocomplete: "off", class: "form-control"
+        = field_errors(resource, :current_password)
+        %span.help-block
+          <i>(we need your current password to confirm your changes)</i>
 
-    = f.submit  class: "btn btn-primary"
+      = f.submit  class: "btn btn-success", style: "margin-top:20px;"
 
