Updates to invites_mailer text.

--- a/app/views/invites_mailer/existing_user_invite.text.erb
+++ b/app/views/invites_mailer/existing_user_invite.text.erb
@@ -1,10 +1,14 @@
+Hi there!
 
-Hey There,
+Just a quick note to let you know that you've been added as a co-manager for <%= @space.name -%>.
 
-Just a quick note to let you know that you've been added as an admin for <%= @space.name -%>  Access it here:
+Please use the link below to access your admin account:
 
 <%= @url -%>
 
-Thanks.
+
+If you have any questions, please let me know.
+
+Thanks,
 
 
