--- a/app/views/invites_mailer/member_invite.text.erb
+++ b/app/views/invites_mailer/member_invite.text.erb
@@ -1,10 +1,15 @@
 
-Hey There,
+Hi there!
 
-You've been added as a member at <%= @space.name-%>. Please sign up using the link below:
+You've been added as a member at <%= @space.name-%>. Welcome!
+
+Please use the link below to confirm your account and pay your initial membership fees.
 
 <%= @url -%>
 
-Thanks.
+
+If you have any questions, please let me know.
+
+Thanks,
 
 
