--- a/app/views/invites_mailer/new_user_invite.text.erb
+++ b/app/views/invites_mailer/new_user_invite.text.erb
@@ -1,10 +1,15 @@
 
-Hey There,
+Hi,
 
-I'd like to add you as an admin for my coworking space.  Please sign up using the link below:
+I'm using <a href="http://dovetail.io">Dovetail</a> to manage members here at <%= @space.name-%>, and I'd like you to co-manage the community with me.
+
+Please use the link below to create an account:
 
 <%= @url -%>
 
-Thanks.
+
+If you have any questions, please let me know.
+
+Thanks,
 
 
