--- a/app/views/plans/_form.html.haml
+++ b/app/views/plans/_form.html.haml
@@ -25,7 +25,7 @@
         = field_errors(@plan,  :deposit)
       .form-group{:class => has_error(@plan, :location)}
         = f.label :location
-        = f.collection_select :location_id, @space.locations, :id, :name, {allow_blank: false }, {class: "form-control"}
+        = f.collection_select :location_id, @space.locations, :id, :description, {allow_blank: false }, {class: "form-control"}
         = field_errors(@plan, :location)
       = f.submit class: "btn btn-success"
       or
