--- a/app/views/resources/_form.html.haml
+++ b/app/views/resources/_form.html.haml
@@ -15,7 +15,7 @@
         = field_errors(@resource,  :unlimted)
     .form-group{:class => has_error(@resource, :location)}
       = f.label :location 
-      = f.collection_select :location_id, @space.locations, :id, :name, {allow_blank: false }, {class: "form-control"}
+      = f.collection_select :location_id, @space.locations, :id, :description, {allow_blank: false }, {class: "form-control"}
       = field_errors(@resource, :location)
     = f.submit class: "btn btn-primary" 
     or 
