Comment out the billing page for now

--- a/app/views/shared/_user_account.html.haml
+++ b/app/views/shared/_user_account.html.haml
@@ -9,5 +9,5 @@
     .list-group
       %a.list-group-item{:class => active_tab("registrations"), :href => edit_user_registration_path} Your Account
       %a.list-group-item{:class => active_tab("spaces"), :href =>  spaces_path} Spaces
-      %a.list-group-item{:class => active_tab("payment_methods"), :href =>  payment_methods_path} Billing
+      =#%a.list-group-item{:class => active_tab("payment_methods"), :href =>  payment_methods_path} Billing
                        
