--- a/app/views/invoices/show.html.haml
+++ b/app/views/invoices/show.html.haml
@@ -17,8 +17,8 @@
       .col-md-12.action-bar
         .row
           .col-md-6
+            = link_to "Email Invoice", deliver_space_member_member_invoice_path(@space, @member, @invoice), method: "post", class: "btn btn-invoice-action btn-xs vertical-center "
             - if @invoice.status == "open"
-              = link_to "Send Invoice", deliver_space_member_member_invoice_path(@space, @member, @invoice), method: "post", class: "btn btn-invoice-action btn-xs vertical-center "
               = link_to "Edit Invoice", edit_space_member_member_invoice_path(@space, @member, @invoice), class: "btn btn-invoice-action btn-xs vertical-center"
               .btn-group
                 %a.btn.btn-invoice-action.btn-xs.vertical-center.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :type => "button"}
