Added member csv download

--- a/app/views/shared/_settings.html.haml
+++ b/app/views/shared/_settings.html.haml
@@ -6,5 +6,4 @@
       %a.list-group-item{:class => active_tab("plans"), :href =>  space_plans_path(@space)} Plans
       %a.list-group-item{:class => active_tab("admins"), :href =>  space_admins_path(@space)} Managers
       %a.list-group-item{:class => active_tab("integrations"), :href =>  space_integrations_path(@space)} Integrations
-
-
+      %a.list-group-item{:class => active_tab("export"), :href =>  space_export_path(@space)} Export Data
